--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
     "@types/react-native-vector-icons": "^6.4.12",
@@ -25,12 +26,15 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-image-base64": "^0.1.4",
+    "react-native-pager-view": "^6.0.1",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-popup-dialog": "^0.18.3",
+    "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-shadow-2": "^7.0.6",
     "react-native-svg": "^13.4.0",
+    "react-native-tab-view": "^3.3.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.23.1"
