--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react-native-vector-icons": "^6.4.12",
     "agora-react-native-rtm": "^1.5.0",
     "agora-rn-uikit": "^4.0.0",
-    "axios": "^1.1.3",
+    "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-agora": "^4.0.0",
@@ -26,6 +26,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-image-base64": "^0.1.4",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pager-view": "^6.0.1",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-popup-dialog": "^0.18.3",
